<resources>
    <string name="app_name">Odisea</string>

    <!-- Titles -->
    <string name="lblRegistroContacto">Registro Contacto</string>

    <!-- Labels -->
    <string name="lblEmail">Correo eléctronico</string>
    <string name="lblEmailConfirma">Confirma Correo</string>
    <string name="lblPass">Contraseña</string>
    <string name="lblConfirmaPass">Confirma contraseña</string>
    <string name="lblPhone">Teléfono</string>
    <string name="lblName">Nombre</string>
    <string name="lblPaterno">Primer Apellido</string>
    <string name="lblMaterno">Segudo Apellido</string>
    <string name="lblRegistro">Continuar con Facebook</string>
    <string name="lblDireccion">Dirección</string>
    <string name="lblPrioridad">Prioridad</string>
    <string name="lblDatoMedico">Datos Médicos</string>
    <string name="lblTipoDeSangre">Ingresa tu tipo de Sangre</string>
    <string name="lblDonadorOrganos">¿Eres donador de Organos?</string>
    <string name="lblEDC">¿Padeces alguna ECD?</string>
    <string name="lblAlergias">¿Padeces alguna Alergia?</string>
    <string name="lblRecoverPass">Recuperar Contraseña</string>

    <!-- Buttons -->
    <string name="btnRegistro">Registro</string>
    <string name="btnInicio">Iniciar Sesión</string>
    <string name="btnCancelar">Cancelar</string>
    <string name="btnAceptar">Aceptar</string>
    <string name="btnGuardar">Guardar</string>
    <string name="btnBorrarCuenta">Borrar cuenta</string>
    <string name="btnEnviar">Enviar</string>
    <string name="btnActualizarInfo">Actualizar</string>

    <!-- Messages -->
    <string name="msgCorreoNoValido">Dirección de correo no valida</string>
    <string name="msgPassVacio">El campo Contraseña no puede ser vacio</string>
    <string name="msgNombreVacio">El campo Nombre no puede ser vacio</string>
    <string name="msgApellidoVacio">El Primer Apellido no puede ser vacio</string>
    <string name="msgTelefonoVacio">El teléfono no puede ser vacio</string>
    <string name="msgFailLogin">Usuario o contraseña no validos</string>
    <string name="msgLeyenda1">Se necesita acceder a tu ubicación para colocarte en el mapa.</string>
    <string name="msgLeyenda2">Se requieren permisos de ubicación para que el mapa, notificaciones y otras funciones operen correctamente.</string>
    <string name="msgPermitirAcceso">Permitir acceso</string>
    <string name="msgPoliticaPrivacidad">Consulta nuestra política de privacidad</string>
    <string name="msgContraseñaNoConsistente">Las contraseñas no son iguales.</string>
    <string name="msgMailNoConsistente">El correo debe ser igual.</string>
    <string name="msgTelefonoInvalido">Número de Teléfono no valido</string>
    <string name="msgNoSeHaregistradoNingunDato">No se ha registrado ningún dato médico</string>

    <string name="msgSitioOdisea">https://odisea.azurewebsites.net/</string>
    <string name="msgOlvideContrasenia">Olvide mi contraseña</string>
    <string name="msgRecover">Ingresa el correo con el cual te registraste para reestablecer la contraseña</string>

    <!--Send information messages -->

    <string name="msgUltimaUbicacion">Ultima Ubicación:</string>
    <string name="msgNivelBateria">Bateria:</string>

    <!-- Content Description -->
    <string name="DesLogo">Logo principal</string>
    <string name="DesBtnFacebook">ImagenContinuarFacebook</string>

    <!-- Services -->
    <string name="namespace">http://tempuri.org/</string>

    <!-- Odisea Services -->
    <string name="url">https://wsodisea.azurewebsites.net/WSOdisea.svc?wsdl</string>
    <string name="soap_action">http://tempuri.org/IWSOdisea/</string>

    <!-- Mail Services -->
    <string name="mail_url">https://wsmail.azurewebsites.net/ServicioMail.svc?wsdl</string>
    <string name="mail_soap_action">http://tempuri.org/IServicioMail/</string>

    <!-- Items -->
    <string name="item_inicio">Inicio</string>
    <string name="item_contact">Contactos</string>
    <string name="item_sitios">Lugares</string>
    <string name="item_config">Configuración</string>
    <string name="item_cuenta">Cuenta</string>
    <string name="item_logout">Cerrar Sesión</string>

    <!-- Methods -->

    <!-- getData Methods -->
    <string name="method_ping">ping</string>
    <string name="method_testDB">testDB</string>

    <!-- postDataMethods -->
    <string name="method_addPersona">addPersona</string>
    <string name="method_getPersona">getPersona</string>

    <!-- ConnectionString Mail -->
    <string name="mailRegistro">Registro exitoso</string>
    <string name="mailBienvenida">Gracias por tu registro</string>
    <string name="mailDatos">Tus datos de conexión:</string>
    <string name="mailDatoUsuario">Usuario:</string>
    <string name="mailDatoPass">Contraseña: </string>
    <string name="mailFinMensaje">Servicios Odisea</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_desc">Navigation header</string>


    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_mapa">Map</string>
</resources>