<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".OlvidePass">

    <ImageView
        android:id="@+id/logoOdiseaPass"
        android:layout_width="96dp"
        android:layout_height="78dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_logo_odisea" />

    <TextView
        android:id="@+id/lblRecuperarPass"
        android:layout_width="250dp"
        android:layout_height="50dp"
        android:layout_marginTop="24dp"
        android:gravity="center"
        android:text="@string/lblRecoverPass"
        android:textAlignment="center"
        android:textSize="@dimen/subtitulo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/logoOdiseaPass"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="331dp"
        android:layout_height="57dp"
        android:layout_marginTop="32dp"
        android:text="@string/msgRecover"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/logoOdiseaPass" />

    <EditText
        android:id="@+id/txtMailPass"
        android:layout_width="326dp"
        android:layout_height="44dp"
        android:layout_marginTop="8dp"
        android:ems="10"
        android:inputType="textEmailAddress"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2" />

    <Button
        android:id="@+id/btnEnviar"
        android:text="@string/btnEnviar"

        android:layout_width="160dp"
        android:layout_height="50dp"

        android:layout_marginTop="24dp"
        android:background="@drawable/buttonshape"

        android:shadowColor="#A8A8A8"

        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtMailPass" />

</android.support.constraint.ConstraintLayout>